# gelfsid-app

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_dev.py  shp.py  tailwind.config.js  tsconfig.json  update.sh  webpack.config.js
gelfcore/: asgi.py  logger.py  router.py  settings.py  urls.py  wsgi.py
gelfmp/: apps.py  context.py  middleware.py  models.py  urls.py  views.py  views_htmx.py
gelfmp/admin/: __init__.py  base.py  exporters.py  filters.py  inlines.py  models.py
gelfmp/api/: admin.py  charts.py  suppliers.py  urls.py
gelfmp/charts/: charts.py  forms.py  utils.py
gelfmp/fixtures/: admin_interface_theme_gelf.json  city_fixture.json  gelf_supplier_data.json  states.json
gelfmp/jobs/: forms.py  views.py
gelfmp/migrations/: 0001_initial.py  0002_alter_bankdetails_supplier_alter_charcoaliqf_year_and_more.py  0002_alter_charcoaliqf_options_and_more.py  0002_bankdetails_account_cnpj.py  0002_charcoalcontract_gelf_signed_and_more.py  0002_charcoalentry_gelfmp_char_supplie_c9b051_idx_and_more.py  0002_charcoalmonthlyplan_price.py  0002_document_geojson_alter_document_document_type.py  0002_rename_gelfmp_ch_entry_d_77632d_idx_gelfmp_char_entry_d_506da5_idx_and_more.py  0003_alter_contact_email.py  0003_supplier_supplier_type.py  0003_task.py  0004_alter_supplier_cep_alter_supplier_supplier_type.py  0004_alter_task_options_alter_task_assigned_to_and_more.py  0004_dcf_available_volume_alter_dcf_declared_volume.py  0005_charcoalcontract_price_alter_task_description.py  0005_contact_cpf.py
gelfmp/models/: __init__.py  alias.py  app_error.py  bank_details.py  charcoal_contract.py  charcoal_entry.py  charcoal_iqf.py  charcoal_monthly_plan.py  choices.py  city_state.py  contact.py  dcf.py  document.py  supplier.py  task.py
gelfmp/services/: cnpj_info.py  contract_filler.py  entries_processor.py  geojson.py  ibama_scrapper.py  iqf_calculator.py
gelfmp/tasks/: forms.py  urls.py  views.py
gelfsid/: logger.py  settings.py  urls.py  wsgi.py
map/: admin.py  apps.py  chart_theme.py  charts.py  context.py  context_processors.py  models.py  plotlytheme.py  static_server.py  urls.py  views.py
nginx/: default.conf
src/: fileserver.py  manage.py  static_server.py
templates/: base.html  index.html  stats.html  supplier_details.html
(+245 files in other folders)
