[project]
name = "gelfsid"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.6.0",
    "django-unfold>=0.40.0",
    "django>=5.1.3",
    "faker>=30.8.2",
    "httpx>=0.27.2",
    "levenshtein>=0.26.1",
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
]

[dependency-groups]
dev = [
    "djlint>=1.36.1",
    "isort>=5.13.2",
    "openpyxl>=3.1.5",
    "rich>=13.9.4",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 120
exclude = ["**/migrations"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT']
