[tool.poetry]
name = "gelfcore"
version = "0.1.0"
description = ""
authors = ["André Lopes <andrelopes-code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-cors-headers = "^4.6.0"
django-environ = "^0.11.2"
django = "^5.1.3"
faker = "^33.0.0"
httpx = "^0.27.2"
levenshtein = "^0.26.1"
loguru = "^0.7.2"
pydantic = "^2.10.1"
gunicorn = "^23.0.0"
pandas = "^2.2.3"
rapidfuzz = "^3.10.1"
plotly = "^5.24.1"
django-extensions = "^3.2.3"
django-admin-interface = "^0.29.2"


[tool.poetry.group.dev.dependencies]
djlint = "^1.36.1"
isort = "^5.13.2"
openpyxl = "^3.1.5"
rich = "^13.9.4"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["**/migrations"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT']
